# base_reinforcement_learning

./: .gitignore  LICENSE  README.md  README.rst  main.py  main_id.py  setup.cfg  setup.py
core/agents/: __init__.py  base.py  dqn.py
core/algos/: __init__.py  base.py  offline.py  online.py
core/envs/: __init__.py  base.py  gym.py
core/nets/: base.py  fc.py
core/utils/: exceptions.py  io.py  typing.py  util.py
core/utils/configs/: __init__.py  base.py  dqn.py  pg.py
core/utils/exploration/: base.py  epsilon_greedy.py  registry.py
core/utils/recorders/: __init__.py  base.py  tensorboard.py
core/utils/replay_buffers/: base.py  efficient.py
core/world_models/: base_world_model.py
experiments/data/configs/experiments_v0/offline/td/: sweep_sensor.yaml
experiments/data/configs/experiments_v0/online/cart_pole/dqn/: best.yaml  sweep.yaml
experiments/data/configs/tests/agent/dqn/: cartpole.yaml
experiments/data/configs/tests/algo/base/: mock_algo.yaml
experiments/data/configs/tests/algo/online/: mock_algo.yaml
experiments/data/configs/tests/sweeper/basic/correct/: all_algo_param_included.yaml  dqn.yaml
experiments/data/configs/tests/sweeper/basic/incorrect/algo_params/: typo.yaml  undefined_key.yaml  wrong_type.yaml(not_detected)
experiments/data/configs/tests/sweeper/basic/incorrect/config_param/: typo.yaml  undefined_config.yaml
experiments/tuner/: __init__.py  base.py  basic.py
experiments/tuner/search/: __init__.py  base.py
test/agent/: test_dqn.py
test/algos/: __init__.py  test_base.py  test_online.py
test/tuner/: test_basic.py
(+5 files in other folders)
