[metadata]
name = rl_codebase
author = Erfan Miahi
author_email = miahi@ualberta.ca
version = 0.1
description = The code-base for experimentation on predicting the sensory data of the water treatment plan!
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = deep reinforcement learning, reinforcement learning, pytorch, python
license = OSI Approved :: MIT License
url=https://github.com/erfanMhi/base_reinforcement_learning
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
install_requires =
    setuptools >= 65.4
    numpy >= 1.23.3
    scipy >= 1.9.2
    torch >= 1.12.1
    torchvision >= 0.13.1
    tensorboard >= 2.10.1
    matplotlib >= 3.6.1
    tqdm >= 4.64.1
    pyyaml >= 6.0
    pytest >= 7.1.3
    tbparse >= 0.0.7
    gym >= 0.26.2

[options.extras_require]
plotting = 
    seaborn >= 0.12
machine_learning =
    scikit-learn >= 1.1.2
logging =
    wandb >= 0.13.3
    
